crates/analyzer/tests/snapshots/errors__ctx_undefined_create.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: No function `create` exists on type `Bar`
  ┌─ compile_errors/ctx_undefined_create.fe:5:13
  │
5 │         Bar.create(0)
  │             ^^^^^^ undefined function


